--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,9 @@ dependencies:
   http_parser: ^4.0.2
   flutter_local_notifications: ^12.0.4
   sqflite: ^2.2.1
-#  firebase_messaging: ^14.1.2
-#  awesome_notifications_fcm: ^0.7.4+1
-#  awesome_notifications: ^0.7.4+1
+  shared_preferences: ^2.0.15
+  firebase_messaging: ^14.2.0
+  firebase_core: ^2.4.0
 
 dev_dependencies:
   flutter_test:
