--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.0.15
   firebase_messaging: ^14.2.0
   firebase_core: ^2.4.0
+  flutter_app_badger: ^1.5.0
 
 dev_dependencies:
   flutter_test:
