--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   firebase_messaging: ^14.2.0
   firebase_core: ^2.4.0
   flutter_app_badger: ^1.5.0
+  url_launcher: ^6.1.7
+  flutter_launch: ^0.3.0
+  font_awesome_flutter: ^10.3.0
 
 dev_dependencies:
   flutter_test:
