--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+5
 
 environment:
   sdk: '>=2.18.1 <3.0.0'
@@ -55,6 +55,8 @@ dependencies:
   url_launcher: ^6.1.7
   flutter_launch: ^0.3.0
   font_awesome_flutter: ^10.3.0
+  email_validator: ^2.1.17
+  fluttertoast: ^8.1.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: false # Generate icons and place them in the res/ folder without using this plugin
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
