--- a/driver_integrated/pubspec.yaml
+++ b/driver_integrated/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   email_validator: ^2.1.17
   fluttertoast: ^8.1.2
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
